--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section class="main-head overlay">
       <div class="container bg-img">
         <h1 class="main-title">Ефективні рішення для вашого бізнесу</h1>
-        <button class="header-button button" type="button">Замовити послугу</button>
+        <button class="header-button button" type="button" data-modal-open>Замовити послугу</button>
       </div>
     </section>
     <section class="hero section">
@@ -102,14 +102,17 @@
       <div class="container">
         <h2 class="second-title">Чим ми займаємось</h2>
         <ul class="list buisness-img">
-          <li>
+          <li class="buisness-item">
             <img src="./images/img1.jpg" width="370" alt="img1" />
+            <p class="lable">ДЕСКТОПНІ ДОДАТКИ</p>
           </li>
-          <li>
+          <li class="buisness-item">
             <img src="./images/img2.jpg" width="370" alt="img2" />
+            <p class="lable">МОБІЛЬНІНІ ДОДАТКИ</p>
           </li>
-          <li>
+          <li class="buisness-item">
             <img src="./images/img3.jpg" width="370" alt="img3" />
+            <p class="lable">ДИЗАЙНЕРСЬКІ РІШЕННЯ</p>
           </li>
         </ul>
       </div>
