--- a/portfolio.html
+++ b/portfolio.html
@@ -21,20 +21,20 @@
         <a href="./index.html" class="header-logo link"><span class="logo-web link">Web</span>Studio</a>
   
         <ul class="header-list list">
-          <li class="list-item"><a class="header-list-link link" href="./index.html">Студія</a></li>
-          <li class="list-item"><a class="header-list-link link current" href="./portfolio.html">Портфоліо</a></li>
-          <li class="list-item"><a class="header-list-link link" href="#">Контакти</a></li>
+          <li class="list-item"><a class="header-link link" href="./index.html">Студія</a></li>
+          <li class="list-item"><a class="header-link link current" href="./portfolio.html">Портфоліо</a></li>
+          <li class="list-item"><a class="header-link link" href="#">Контакти</a></li>
         </ul>
   
         <ul class="list contact">
-          <li class="list-item">
+          <li class="contact-item">
             <a class="contact-link link" href="mailto:info@devstudio.com">
               <svg class="header-icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-mail"></use>
               </svg>info@devstudio.com
             </a>
           </li>
-          <li class="list-item">
+          <li class="contact-item">
             <a class="contact-link link" href="tel:+380961111111">
               <svg class="header-icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-phone"></use>
@@ -44,6 +44,7 @@
         </ul>
       </nav>
     </div>
+  
   </header>
   <main>
     <section class="main-filter container section">
@@ -56,55 +57,145 @@
         <li class="btn-nav"><button type="button" class="filter-button button">Маркетинг</button></li>
       </ul>
       <ul class="list filter-list">
-        <li class="filter-item"><a href="#" class="link filter-link"><img src="./images/tehno.jpg" width="370" alt="tehno">
+        <li class="filter-item">
+          <a href="#" class="link filter-link">
+          <div class="filter-img">
+            <img src="./images/tehno.jpg" width="370" alt="tehno">
+            <div class="animate">
+              <p class="animate-text">
+                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                вичерпні відомості про компанію чи приватну особу.
+              </p>
+            </div>
+          </div>
             <div class="border">
               <h3 class="filter-title">Технокряк</h3>
               <p class="filter-text">Веб-сайт</p>
             </div>
           </a></li>
-        <li class="filter-item"><a href="" class="link filter-link"><img src="./images/poster.jpg" width="370" alt="poster">
+        <li class="filter-item">
+          <a href="" class="link filter-link">
+            <div class="filter-img">
+              <img src="./images/poster.jpg" width="370" alt="poster">
+              <div class="animate">
+                <p class="animate-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+            </div>
             <div class="border">
               <h3 class="filter-title">Постер New Orlean vs Golden Star</h3>
               <p class="filter-text">Дизайн</p>
             </div>
           </a></li>
-        <li class="filter-item"><a href="" class="link filter-link"><img src="./images/restor.jpg" width="370" alt="restoran">
+        <li class="filter-item">
+          <a href="" class="link filter-link">
+            <div class="filter-img">
+              <img src="./images/restor.jpg" width="370" alt="restoran">
+              <div class="animate">
+                <p class="animate-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+            </div>
             <div class="border">
               <h3 class="filter-title">Ресторан Seafood</h3>
               <p class="filter-text">Додаток</p>
             </div>
           </a></li>
-        <li class="filter-item"><a href="" class="link filter-link"><img src="./images/prime.jpg" width="370" alt="prime">
+        <li class="filter-item">
+          <a href="" class="link filter-link">
+            <div class="filter-img">
+              <img src="./images/prime.jpg" width="370" alt="prime">
+              <div class="animate">
+                <p class="animate-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+            </div>
             <div class="border">
               <h3 class="filter-title">Проєкт Prime</h3>
               <p class="filter-text">Маркетинг</p>
             </div>
           </a></li>
-        <li class="filter-item"><a href="" class="link filter-link"><img src="./images/boxes.jpg" width="370" alt="boxes">
+        <li class="filter-item">
+          <a href="" class="link filter-link">
+            <div class="filter-img">
+              <img src="./images/boxes.jpg" width="370" alt="boxes">
+              <div class="animate">
+                <p class="animate-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+            </div>
             <div class="border">
               <h3 class="filter-title">Проєкт Boxes</h3>
               <p class="filter-text">Доаток</p>
             </div>
           </a></li>
-        <li class="filter-item"><a href="" class="link filter-link"><img src="./images/inspir.jpg" width="370" alt="inspir">
+        <li class="filter-item">
+          <a href="" class="link filter-link">
+            <div class="filter-img">
+              <img src="./images/inspir.jpg" width="370" alt="inspir">
+              <div class="animate">
+                <p class="animate-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+            </div>
             <div class="border">
               <h3 class="filter-title">Inspiration has no Borders</h3>
               <p class="filter-text">Веб-сайт</p>
             </div>
           </a></li>
-        <li class="filter-item"><a href="" class="link filter-link"><img src="./images/limited.jpg" width="370" alt="limited">
+        <li class="filter-item">
+          <a href="" class="link filter-link">
+            <div class="filter-img">
+              <img src="./images/limited.jpg" width="370" alt="limited">
+              <div class="animate">
+                <p class="animate-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+            </div>
             <div class="border">
               <h3 class="filter-title">Видання Limited Edition</h3>
               <p class="filter-text">Дизайн</p>
             </div>
           </a></li>
-        <li class="filter-item"><a href="" class="link filter-link"><img src="./images/lab.jpg" width="370" alt="lab">
+        <li class="filter-item">
+          <a href="" class="link filter-link">
+            <div class="filter-img">
+              <img src="./images/lab.jpg" width="370" alt="lab">
+              <div class="animate">
+                <p class="animate-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+            </div>
             <div class="border">
               <h3 class="filter-title">Проєкт LAB</h3>
               <p class="filter-text">Маркетинг</p>
             </div>
           </a></li>
-        <li class="filter-item"><a href="" class="link filter-link"><img src="./images/grow.jpg" width="370" alt="growing">
+        <li class="filter-item">
+          <a href="" class="link filter-link">
+            <div class="filter-img">
+              <img src="./images/grow.jpg" width="370" alt="growing">
+              <div class="animate">
+                <p class="animate-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+            </div>
             <div class="border">
               <h3 class="filter-title">Growing Business</h3>
               <p class="filter-text">Додаток</p>
