--- a/index.html
+++ b/index.html
@@ -331,6 +331,16 @@
       </div>
     </div>
   </footer>
+
+  <div class="modal-order is-hidden" data-modal>
+    <div class="modal-window">
+      <button type="button" class="modal-close" data-modal-close>
+        <svg width="11" height="11">
+          <use href="./images/icons.svg#icon-Closebtn"></use>
+        </svg>
+      </button>
+    </div>
+  </div>
   <script src="./js/modal.js"></script>
   </body>
 </html>
